<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/userInfo_users"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_user"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.618"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/userInfo_headPic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headPic_users"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/user_pic_info"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:riv_border_color="#000000"
                        app:riv_border_width="1dp"
                        android:layout_gravity="center_vertical"
                        app:riv_oval="true"
                        android:layout_marginEnd="20dp"
                        android:scaleType="centerCrop"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/userInfo_changeNickname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickName_users"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/user_nickname_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="20dp"
                        android:textSize="14sp" />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_to"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/userInfo_changePass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_users"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/user_pass_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:layout_marginEnd="20dp"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_to"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/userInfo_changeUserName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userName_users"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/user_username_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:layout_marginEnd="50dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/userInfo_changePhone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_users"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/user_phone_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:layout_marginEnd="50dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/userInfo_floor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floor_users"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/user_floor_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:layout_marginEnd="50dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.382"/>
    </LinearLayout>

</RelativeLayout>